<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/this_list_only_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:visibility="gone"
            tools:text="Only this list (Planning)"
            tools:visibility="visible" />

        <FrameLayout
            android:id="@+id/format_add_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.revolgenx.anilib.ui.view.widgets.chip.DynamicChip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/format"
                app:closeIcon="@drawable/ic_add" />
        </FrameLayout>


        <com.pranavpandey.android.dynamic.support.widget.DynamicRecyclerView
            android:id="@+id/formatChipRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <com.pranavpandey.android.dynamic.support.widget.DynamicTextView
            style="@style/FilterHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status" />


        <com.revolgenx.anilib.ui.view.widgets.AlCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.pranavpandey.android.dynamic.support.widget.DynamicSpinner
                android:id="@+id/listStatusSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.revolgenx.anilib.ui.view.widgets.AlCardView>

        <com.pranavpandey.android.dynamic.support.widget.DynamicTextView
            style="@style/FilterHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre" />


        <com.revolgenx.anilib.ui.view.widgets.AlCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.pranavpandey.android.dynamic.support.widget.DynamicSpinner
                android:id="@+id/listGenreSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.revolgenx.anilib.ui.view.widgets.AlCardView>

        <com.pranavpandey.android.dynamic.support.widget.DynamicTextView
            style="@style/FilterHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort" />

        <com.revolgenx.anilib.ui.view.widgets.AlCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.revolgenx.anilib.ui.view.sort.AlSortLayout
                android:id="@+id/list_sort_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"/>

        </com.revolgenx.anilib.ui.view.widgets.AlCardView>


        <com.pranavpandey.android.dynamic.support.widget.DynamicTextView
            style="@style/FilterHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tags" />

        <com.revolgenx.anilib.ui.view.widgets.chip.ListTagChipGroup
            android:id="@+id/list_tag_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="6dp"
            app:chipSpacingVertical="4dp" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/hide_not_yet_released_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/list_filter_hide_not_yet_released" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/hide_watched_sequels_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_filter_hide_watched_sequels" />

        <com.revolgenx.anilib.ui.view.widgets.checkbox.AlCheckBox
            android:id="@+id/hentai_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:intermediate_mode="true"
            app:text="@string/hentai_only"
            android:layout_marginVertical="8dp"/>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>


